--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,10 @@ name = "pypi"
 [packages]
 langchain = "*"
 openai = "*"
+black = "*"
 python-dotenv = "*"
-langchain-openai = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
